--- a/test/voice-test.config
+++ b/test/voice-test.config
@@ -9,6 +9,7 @@ baidu_voice
 	mac_addr="56:84:7a:fe:97:99";
 	api_key="YGyI3APWnLGSiIFUWEnhBEoC";
 	secret_key="fc4d81ef45486b17da48d6d2e81b65d5";
+	host="http://vop.baidu.com/server_api";
 	path="test.pcm";
 	
 	action0
@@ -159,16 +160,90 @@ baidu_voice
 			storage=1;
 			get_key="http_header";
 		}
-		
 	}
 	
 	action3
 	{
 		opt="POST";
-		tools="curl_setopt";
-		uri="http://vop.baidu.com/server_api";
-		request=1;
-		delay=30;
+		tools="curl_easy_setopt";
+		param
+		{
+			CURLOPT_URL
+			{
+				tool="get_host";
+				ret_data
+				{
+					ret_type="STRING";
+				}
+			}
+			CURLOPT_POST=1;
+			CURLOPT_TIMEOUT=30;
+			CURLOPT_HTTPHEADER
+			{
+				tools="get_http_header";
+				ret_data
+				{
+					ret_type="curl_slist";
+				}
+			}
+			CURLOPT_POSTFIELDS
+			{
+				tools="get_json_buffer";
+				ret_data
+				{
+					ret_type="JSON-PACKAGE";
+				}
+			}
+			CURLOPT_POSTFIELDSIZE
+			{
+				tools="json_writer";
+				param
+				{
+					tools="get_json_buffer";
+					ret_data
+					{
+						ret_type="JSON-PACKAGE";
+					}
+				}
+				ret_data
+				{
+					ret_type="INT";
+				}
+			}
+			CURLOPT_WRITEDATA
+			{
+				tools="get_result_buffer";
+				ret_data
+				{
+					ret_type="CHAR_P";
+					storage=1;
+					get_key="result_buffer";
+				}
+			}
+			
+			
+		}
+		ret_data
+		{
+			ret_type="NULL";
+		}
+	}
+	
+	action4
+	{
+		tools="curl_easy_perform";
+		param
+		{
+			tools="get_curl";
+			ret_data
+			{
+				ret_type="CURL_P";
+			}
+		}
+		ret_data
+		{
+			ret_type="CURL_CODE";
+		}
+		
 	}
 }
-
