--- a/testcases/a.config
+++ b/testcases/a.config
@@ -1,4 +1,4 @@
-#include "config/b.config"
+#include "testcases/b.config"
 
 a_a {
  k1 = "aa";
@@ -16,8 +16,9 @@ a_a {
  }
 }
 
-/* multi line comment
-that goes on forever */
+/* multi line comments
+multi line comments
+*** */
 
 a_c {
   k1 = "first part "
